--- a/src/cascadia/TerminalApp/CommandPalette.xaml
+++ b/src/cascadia/TerminalApp/CommandPalette.xaml
@@ -84,7 +84,7 @@ the MIT License. See LICENSE in the project root for license information. -->
         <RowDefinition Height="2*"/>
     </Grid.RowDefinitions>
 
-    <!-- Setting the row/col span of this shadow backdrop is a bi of a hack. In
+    <!-- Setting the row/col span of this shadow backdrop is a bit of a hack. In
     order to receive pointer events, an element needs to be _not_ transparent.
     However, we want to be able to eat all the clicks outside the immediate
     bounds of the command palette, and we don't want a semi-transparent overlay
