--- a/src/cascadia/TerminalApp/CommandPalette.xaml
+++ b/src/cascadia/TerminalApp/CommandPalette.xaml
@@ -128,7 +128,9 @@ the MIT License. See LICENSE in the project root for license information. -->
             Margin="8"
             IsSpellCheckEnabled="False"
             TextChanged="_filterTextChanged"
+            PreviewKeyDown="_previewKeyDownHandler"
             KeyDown="_keyDownHandler"
+            KeyUp="_keyUpHandler"
             Text="">
         </TextBox>
 
