--- a/src/cascadia/TerminalApp/CommandPalette.xaml
+++ b/src/cascadia/TerminalApp/CommandPalette.xaml
@@ -130,7 +130,7 @@ the MIT License. See LICENSE in the project root for license information. -->
             TextChanged="_filterTextChanged"
             PreviewKeyDown="_previewKeyDownHandler"
             KeyDown="_keyDownHandler"
-            KeyUp="_keyUpHandler"
+            PreviewKeyUp="_keyUpHandler"
             Text="">
         </TextBox>
 
