--- a/src/cascadia/TerminalApp/CommandPalette.xaml
+++ b/src/cascadia/TerminalApp/CommandPalette.xaml
@@ -164,7 +164,7 @@ the MIT License. See LICENSE in the project root for license information. -->
                                   AutomationProperties.Name="{x:Bind Name, Mode=OneWay}"
                                   AutomationProperties.AcceleratorKey="{x:Bind KeyChordText, Mode=OneWay}">
 
-                        <Grid HorizontalAlignment="Stretch"  >
+                        <Grid HorizontalAlignment="Stretch" ColumnSpacing="10" >
 
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="16"/>
@@ -174,9 +174,11 @@ the MIT License. See LICENSE in the project root for license information. -->
 
                             <!-- TODO GH#6644: Add Icon to command palette entries, in column 0 -->
 
+                            <IconSourceElement Grid.Column="0" IconSource="{x:Bind IconSource, Mode=OneWay}"/>
+
                             <TextBlock Grid.Column="1"
-                                       HorizontalAlignment="Left"
-                                       Text="{x:Bind Name, Mode=OneWay}" />
+                                    HorizontalAlignment="Left"
+                                    Text="{x:Bind Name, Mode=OneWay}" />
 
                             <Border
                                 Grid.Column="2"
