--- a/src/cascadia/TerminalApp/CommandPalette.xaml
+++ b/src/cascadia/TerminalApp/CommandPalette.xaml
@@ -22,6 +22,8 @@ the MIT License. See LICENSE in the project root for license information. -->
             <!-- This creates an instance of our CommandKeyChordVisibilityConverter we can reference below -->
             <local:CommandKeyChordVisibilityConverter x:Key="CommandKeyChordVisibilityConverter"/>
 
+            <local:CommandIconStringConverter x:Key="CommandIconStringConverter"/>
+
             <ResourceDictionary.ThemeDictionaries>
                 <ResourceDictionary x:Key="Dark">
                     <Style x:Key="CommandPaletteBackground" TargetType="Grid">
@@ -167,7 +169,7 @@ the MIT License. See LICENSE in the project root for license information. -->
                                   AutomationProperties.Name="{x:Bind Name, Mode=OneWay}"
                                   AutomationProperties.AcceleratorKey="{x:Bind KeyChordText, Mode=OneWay}">
 
-                        <Grid HorizontalAlignment="Stretch" ColumnSpacing="4" >
+                        <Grid HorizontalAlignment="Stretch" ColumnSpacing="5" >
 
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="16"/>
@@ -176,7 +178,11 @@ the MIT License. See LICENSE in the project root for license information. -->
                             </Grid.ColumnDefinitions>
 
                             <!-- TODO GH#6644: Add Icon to command palette entries, in column 0 -->
-                            <IconSourceElement IconSource="{x:Bind Icon}"/>
+                            <IconSourceElement
+                                Grid.Column="0"
+                                IconSource="{x:Bind IconString,
+                                                    Mode=OneWay,
+                                                    Converter={StaticResource CommandIconStringConverter}}"/>
 
                             <TextBlock Grid.Column="1"
                                        HorizontalAlignment="Left"
