--- a/src/cascadia/TerminalApp/CommandPalette.xaml
+++ b/src/cascadia/TerminalApp/CommandPalette.xaml
@@ -1,6 +1,6 @@
 <!-- Copyright (c) Microsoft Corporation. All rights reserved. Licensed under
 the MIT License. See LICENSE in the project root for license information. -->
-<Grid
+<UserControl
     x:Class="TerminalApp.CommandPalette"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
@@ -9,10 +9,16 @@ the MIT License. See LICENSE in the project root for license information. -->
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:Windows10version1903="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract, 8)"
+    TabNavigation="Cycle"
+    IsTabStop="True"
+    AllowFocusOnInteraction="True"
     PointerPressed="_rootPointerPressed"
+    PreviewKeyDown="_previewKeyDownHandler"
+    KeyDown="_keyDownHandler"
+    PreviewKeyUp="_keyUpHandler"
     mc:Ignorable="d">
 
-    <Grid.Resources>
+    <UserControl.Resources>
         <ResourceDictionary>
 
             <!-- ThemeShadow is only on 18362. This "Windows10version1903" bit
@@ -100,29 +106,30 @@ the MIT License. See LICENSE in the project root for license information. -->
                 </ResourceDictionary>
             </ResourceDictionary.ThemeDictionaries>
         </ResourceDictionary>
+    </UserControl.Resources>
+    
+    <Grid>
 
-    </Grid.Resources>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="2*" />
+            <ColumnDefinition Width="6*" />
+            <ColumnDefinition Width="2*" />
+        </Grid.ColumnDefinitions>
 
-    <Grid.ColumnDefinitions>
-        <ColumnDefinition Width="2*" />
-        <ColumnDefinition Width="6*" />
-        <ColumnDefinition Width="2*" />
-    </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="8*"/>
+            <RowDefinition Height="2*"/>
+        </Grid.RowDefinitions>
 
-    <Grid.RowDefinitions>
-        <RowDefinition Height="8*"/>
-        <RowDefinition Height="2*"/>
-    </Grid.RowDefinitions>
+        <!-- Setting the row/col span of this shadow backdrop is a bit of a hack. In
+        order to receive pointer events, an element needs to be _not_ transparent.
+        However, we want to be able to eat all the clicks outside the immediate
+        bounds of the command palette, and we don't want a semi-transparent overlay
+        over all of the UI. Fortunately, if we make this _shadowBackdrop the size of
+        the entire page, then it can be mostly transparent, and cause the root grid
+        to receive clicks _anywhere_ in its bounds. -->
 
-    <!-- Setting the row/col span of this shadow backdrop is a bit of a hack. In
-    order to receive pointer events, an element needs to be _not_ transparent.
-    However, we want to be able to eat all the clicks outside the immediate
-    bounds of the command palette, and we don't want a semi-transparent overlay
-    over all of the UI. Fortunately, if we make this _shadowBackdrop the size of
-    the entire page, then it can be mostly transparent, and cause the root grid
-    to receive clicks _anywhere_ in its bounds. -->
-
-    <Grid
+        <Grid
         x:Name="_shadowBackdrop"
         Background="Transparent"
         Grid.Column="0"
@@ -133,7 +140,7 @@ the MIT License. See LICENSE in the project root for license information. -->
         VerticalAlignment="Stretch">
         </Grid>
 
-    <Grid
+        <Grid
         x:Name="_backdrop"
         Style="{ThemeResource CommandPaletteBackground}"
         CornerRadius="{ThemeResource ControlCornerRadius}"
@@ -145,35 +152,32 @@ the MIT License. See LICENSE in the project root for license information. -->
         HorizontalAlignment="Stretch"
         VerticalAlignment="Top">
 
-        <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-        <TextBox
+            <TextBox
             Grid.Row="0"
             x:Name="_searchBox"
             Margin="8"
             IsSpellCheckEnabled="False"
             TextChanged="_filterTextChanged"
-            PreviewKeyDown="_previewKeyDownHandler"
-            KeyDown="_keyDownHandler"
-            PreviewKeyUp="_keyUpHandler"
             PlaceholderText="{x:Bind SearchBoxText, Mode=OneWay}"
             Text="">
-        </TextBox>
+            </TextBox>
 
-        <TextBlock
+            <TextBlock
             Padding="16"
             x:Name="_noMatchesText"
             FontStyle="Italic"
             Visibility="Collapsed"
             Grid.Row="1"
             Text="{x:Bind NoMatchesText, Mode=OneWay}">
-        </TextBlock>
+            </TextBlock>
 
-        <ListView
+            <ListView
             Grid.Row="2"
             x:Name="_filteredActionsView"
             HorizontalAlignment="Stretch"
@@ -185,36 +189,36 @@ the MIT License. See LICENSE in the project root for license information. -->
             ItemClick="_listItemClicked"
             ItemsSource="{x:Bind FilteredActions}">
 
-            <ItemsControl.ItemTemplate >
-                <DataTemplate x:DataType="local:Command">
+                <ItemsControl.ItemTemplate >
+                    <DataTemplate x:DataType="local:Command">
 
-                    <!-- This HorizontalContentAlignment="Stretch" is important
+                        <!-- This HorizontalContentAlignment="Stretch" is important
                     to make sure it takes the entire width of the line -->
-                    <ListViewItem HorizontalContentAlignment="Stretch"
+                        <ListViewItem HorizontalContentAlignment="Stretch"
                                   AutomationProperties.Name="{x:Bind Name, Mode=OneWay}"
                                   AutomationProperties.AcceleratorKey="{x:Bind KeyChordText, Mode=OneWay}">
 
-                        <Grid HorizontalAlignment="Stretch" ColumnSpacing="8" >
+                            <Grid HorizontalAlignment="Stretch" ColumnSpacing="8" >
 
-                            <Grid.ColumnDefinitions>
-                                <ColumnDefinition Width="16"/>
-                                <ColumnDefinition Width="Auto"/>
-                                <ColumnDefinition Width="*"/>
-                            </Grid.ColumnDefinitions>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="16"/>
+                                    <ColumnDefinition Width="Auto"/>
+                                    <ColumnDefinition Width="*"/>
+                                </Grid.ColumnDefinitions>
 
-                            <!-- TODO GH#6644: Add Icon to command palette entries, in column 0 -->
-                            <IconSourceElement
+                                <!-- TODO GH#6644: Add Icon to command palette entries, in column 0 -->
+                                <IconSourceElement
                                 Grid.Column="0"
                                 IconSource="{x:Bind IconSource, Mode=OneWay }"/>
 
-                            <TextBlock Grid.Column="1"
+                                <TextBlock Grid.Column="1"
                                        HorizontalAlignment="Left"
                                        Text="{x:Bind Name, Mode=OneWay}" />
 
-                            <!-- The block for the key chord is only visible
+                                <!-- The block for the key chord is only visible
                             when there's actual text set as the label. See
                             CommandKeyChordVisibilityConverter for details. -->
-                            <Border
+                                <Border
                                 Grid.Column="2"
                                 Visibility="{x:Bind KeyChordText,
                                              Mode=OneWay,
@@ -224,19 +228,20 @@ the MIT License. See LICENSE in the project root for license information. -->
                                 HorizontalAlignment="Right"
                                 VerticalAlignment="Center">
 
-                                <TextBlock
+                                    <TextBlock
                                     Style="{ThemeResource KeyChordTextBlockStyle}"
                                     FontSize="12"
                                     Text="{x:Bind KeyChordText, Mode=OneWay}" />
-                            </Border>
+                                </Border>
 
-                        </Grid>
-                    </ListViewItem>
-                </DataTemplate>
-            </ItemsControl.ItemTemplate>
-        </ListView>
+                            </Grid>
+                        </ListViewItem>
+                    </DataTemplate>
+                </ItemsControl.ItemTemplate>
+            </ListView>
+
+        </Grid>
+
 
     </Grid>
-
-
-</Grid>
+</UserControl>
