--- a/src/cascadia/TerminalApp/CommandPalette.xaml
+++ b/src/cascadia/TerminalApp/CommandPalette.xaml
@@ -201,14 +201,10 @@ the MIT License. See LICENSE in the project root for license information. -->
                             <Grid HorizontalAlignment="Stretch" ColumnSpacing="8" >
 
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="16"/>
-                                    <!-- icon -->
-                                    <ColumnDefinition Width="Auto"/>
-                                    <!-- command label -->
-                                    <ColumnDefinition Width="*"/>
-                                    <!-- key chord -->
-                                    <ColumnDefinition Width="16"/>
-                                    <!-- gutter for scrollbar -->
+                                    <ColumnDefinition Width="16"/>   <!-- icon -->
+                                    <ColumnDefinition Width="Auto"/> <!-- command label -->
+                                    <ColumnDefinition Width="*"/>    <!-- key chord -->
+                                    <ColumnDefinition Width="16"/>   <!-- gutter for scrollbar -->
                                 </Grid.ColumnDefinitions>
 
                                 <!-- TODO GH#6644: Add Icon to command palette entries, in column 0 -->
