Rename VS Project to SettingsControl

--- a/src/TerminalSettings/TerminalSettings/Profiles.xaml
+++ b/src/TerminalSettings/TerminalSettings/Profiles.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="TerminalSettings.Profiles"
+    x:Class="SettingsControl.Profiles"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TerminalSettings"
+    xmlns:local="using:SettingsControl"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:Windows10version1809="http://schemas.microsoft.com/winfx/2006/xaml/presentation?IsApiContractPresent(Windows.Foundation.UniversalApiContract, 7)"
