--- a/src/TerminalSettings/TerminalSettings/App.xaml
+++ b/src/TerminalSettings/TerminalSettings/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application
-    x:Class="TerminalSettings.App"
+    x:Class="SettingsControl.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TerminalSettings">
+    xmlns:local="using:SettingsControl">
     <Application.Resources>
         <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls"/>
     </Application.Resources>
