--- a/src/TerminalSettings/TerminalSettings/Globals.xaml
+++ b/src/TerminalSettings/TerminalSettings/Globals.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="TerminalSettings.Globals"
+    x:Class="SettingsControl.Globals"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TerminalSettings"
+    xmlns:local="using:SettingsControl"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:Controls="using:Microsoft.UI.Xaml.Controls"
