--- a/src/TerminalSettings/TerminalSettings/Keybindings.xaml
+++ b/src/TerminalSettings/TerminalSettings/Keybindings.xaml
@@ -1,8 +1,8 @@
 ﻿<Page
-    x:Class="TerminalSettings.Keybindings"
+    x:Class="SettingsControl.Keybindings"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:TerminalSettings"
+    xmlns:local="using:SettingsControl"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
