--- a/src/TerminalSettings/TerminalSettings/MainPage.xaml
+++ b/src/TerminalSettings/TerminalSettings/MainPage.xaml
@@ -56,6 +56,25 @@
                 <muxc:NavigationViewItem.Icon>
                     <FontIcon Glyph="&#xE790;" />
                 </muxc:NavigationViewItem.Icon>
+
+                <muxc:NavigationViewItem.MenuItems>
+                    <muxc:NavigationViewItem Tag="GlobalAppearance_Nav" >
+                        <!-- Couldn't find spaceship -->
+                        <muxc:NavigationViewItem.Icon>
+                            <FontIcon Glyph="&#xE909;" />
+                        </muxc:NavigationViewItem.Icon>
+                        <TextBlock Tag="Global_Page">Global</TextBlock>
+                    </muxc:NavigationViewItem>
+
+                    <muxc:NavigationViewItem Tag="ColorSchemes_Nav" >
+                        <!-- Couldn't find spaceship -->
+                        <muxc:NavigationViewItem.Icon>
+                            <FontIcon Glyph="&#xE909;" />
+                        </muxc:NavigationViewItem.Icon>
+                        <TextBlock Tag="Global_Page">Color Schemes</TextBlock>
+                    </muxc:NavigationViewItem>
+                </muxc:NavigationViewItem.MenuItems>
+
             </muxc:NavigationViewItem>
 
             <muxc:NavigationViewItem Tag="Profiles_Nav">
@@ -65,7 +84,7 @@
                 <TextBlock Tag="Profiles_Page">Profiles</TextBlock>
 
                 <muxc:NavigationViewItem.MenuItems>
-                    <muxc:NavigationViewItem Tag="Global_Nav" >
+                    <muxc:NavigationViewItem Tag="GlobalProfile_Nav" >
                         <!-- Couldn't find spaceship -->
                         <muxc:NavigationViewItem.Icon>
                             <FontIcon Glyph="&#xE909;" />
