--- a/src/cascadia/TerminalApp/TerminalPage.xaml
+++ b/src/cascadia/TerminalApp/TerminalPage.xaml
@@ -68,6 +68,14 @@ the MIT License. See LICENSE in the project root for license information. -->
             DefaultButton="Primary">
         </ContentDialog>
 
+        <ContentDialog
+            x:Load="False"
+            x:Name="CloseTabDialog"
+            x:Uid="CloseTabDialog"
+            DefaultButton="Primary"
+            PrimaryButtonClick="_CloseTabWarningPrimaryButtonOnClick">
+        </ContentDialog>
+
         <local:CommandPalette
             x:Name="CommandPalette"
             Grid.Row="1"
