--- a/src/TerminalSettings/TerminalSettings/Globals.xaml
+++ b/src/TerminalSettings/TerminalSettings/Globals.xaml
@@ -1,5 +1,5 @@
 ﻿<Page
-    x:Class="SettingsControl.Globals"
+    x:Class="TerminalSettings.Globals"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:SettingsControl"
